updated new builds

--- a/packages/react/src/assets/css/app.css
+++ b/packages/react/src/assets/css/app.css
@@ -1,4 +1,6 @@
-@import "./bootstrap-extend.scss";
+@import "./bootstrap-extend.css";
+@import "./input.css";
+
 
 @font-face {
   font-family: "PlusJakartaSans";
